--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
-                                <p>Email Address</p>
+                                <h3><a href="mailto:r1991vm@gmail.com">r1991vm@gmail.com</a></h3>
+                                <p>Адрес электронной почты</p>
                               </div>
                             </div>
                           </div>
