--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                               <i class="icon-facebook"></i>
                               <div class="item-data">
                                 <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
-                                <p>Facebook Profile</p>
+                                <p>Facebook</p>
                               </div>
                             </div>
                           </div>
@@ -127,8 +127,8 @@
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
-                                <p>Twitter Handle</p>
+                                <h3><a href="https://vk.com/yur4ukk">Yuri Yadvizhuk</a></h3>
+                                <p>Vk</p>
                               </div>
                             </div>
                           </div>
