--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-facebook"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
+                                <h3><a href="https://www.facebook.com/jurij.yadvizhuk">Yuri Yadvizhuk</a></h3>
                                 <p>Facebook</p>
                               </div>
                             </div>
