--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
+                Если что я здесь<a href="https://vk.com/yur4ukk" title="web developer master">YURI YADVIZHUK</a>.
             </p>
         </footer>
     </div><!-- #main -->
