--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Если что я здесь<a href="https://vk.com/yur4ukk" target="_blank title="web developer master">YURI YADVIZHUK</a>.
+                Если что я здесь<a href="https://vk.com/yur4ukk" target="_blank title="web developer master"></>YURI YADVIZHUK</a>
             </p>
         </footer>
     </div><!-- #main -->
