--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -379,7 +379,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Если что я здесь<a href="https://vk.com/yur4ukk" target="_blank title="web developer master"></>YURI YADVIZHUK</a>
+                Если что я здесь<a href="https://vk.com/yur4ukk" target="_blank title="web developer master"> YURI YADVIZHUK</a>
             </p>
         </footer>
     </div><!-- #main -->
