--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sunny Luthra - Traveller - Free Thinker - Blah Blah</title>
+  <title>Web-разрабочик</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
@@ -118,16 +118,16 @@
                             <div class="item-box clearfix">
                               <i class="icon-facebook"></i>
                               <div class="item-data">
-                                <h3><a href="https://www.facebook.com/jurij.yadvizhuk">Yuri Yadvizhuk</a></h3>
+                                <h3><a href="https://www.facebook.com/jurij.yadvizhuk" target="_blank">Yuri Yadvizhuk</a></h3>
                                 <p>Facebook</p>
                               </div>
                             </div>
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                              <i class="icon-vk"></i>
                               <div class="item-data">
-                                <h3><a href="https://vk.com/yur4ukk">Yuri Yadvizhuk</a></h3>
+                                <h3><a href="https://vk.com/yur4ukk" target="_blank">Yuri Yadvizhuk</a></h3>
                                 <p>Vk</p>
                               </div>
                             </div>
@@ -343,7 +343,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>Мой адрес</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
+                              <p>Undefined</p>
                             </div>
                          </div>
                        </div>
@@ -354,7 +354,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>Мобильный номер</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <p>8-967-478 44 20<br/>8-968-393-11-76</p>
                             </div>
                          </div>
                        </div>
@@ -365,7 +365,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>Обо мне</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
+                              <p>Я люблю работать, так что не стесняйся.</p>
                             </div>
                          </div>
                        </div>
