--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <!--   <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -81,7 +82,7 @@
                                     Web / Developer
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                   Занимаюсь веб разработкой более 2-х лет Большой опыт работы CSS3 HTML5 jQueri JS
                                 </p>
                             </div>
                         </div>
