--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <!--   <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
+  <!-- <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"> -->
+      <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -274,7 +274,7 @@
                                 <img src="http://lorempixel.com/306/306/sports/1" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
+                                        <a href="#" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -284,7 +284,7 @@
                                 <img src="http://lorempixel.com/306/306/sports/2" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+                                        <a href="#" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -294,7 +294,7 @@
                                 <img src="http://lorempixel.com/306/306/sports/3" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
+                                        <a href="#" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -305,7 +305,7 @@
                                 <img src="http://lorempixel.com/306/306/sports/4" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a>
+                                        <a href="#" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -315,7 +315,7 @@
                                 <img src="http://lorempixel.com/306/306/sports/5" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
+                                        <a href="#" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
@@ -325,7 +325,7 @@
                                 <img src="http://lorempixel.com/306/306/business/2" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
+                                        <a href="#" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
