--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  
-<!--   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
   <script src="js/vendor/jquery.hashchange.min.js"></script>
   <script src="js/vendor/jquery.easytabs.min.js"></script>
@@ -76,7 +75,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-9/11041580_878644535563836_7906179254352239758_n.jpg?oh=73300b06fe3f6b1994a39c235ee42e90&oe=58505B2C" alt="Sunny Luthra">
+                                <img src="images/IMAG0822.jpg" alt="Юрий Ядвижук">
                             </div>
                             <div class="info">
                                 <h2>
@@ -110,16 +109,16 @@
                         </div>
                         <div class="break"></div>
                         <div class="contact-info">
-                          <div class="g1">
+                          <div class="g6">
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:r1991vm@gmail.com">r1991vm@gmail.com</a></h3>
+                                <h3><a href="mailto:yuriyadvizhuk@gmail.com">yuriyadvizhuk@gmail.com</a></h3>
                                 <p>Адрес электронной почты</p>
                               </div>
                             </div>
                           </div>
-                          <div class="g1">
+                          <div class="g6">
                             <div class="item-box clearfix">
                               <i class="icon-facebook"></i>
                               <div class="item-data">
@@ -128,12 +127,21 @@
                               </div>
                             </div>
                           </div>
-                          <div class="g1">
+                          <div class="g6">
                             <div class="item-box clearfix">
                               <i class="icon-vk"></i>
                               <div class="item-data">
                                 <h3><a href="https://vk.com/yur4ukk" target="_blank">Yuri Yadvizhuk</a></h3>
                                 <p>Vk</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="g6">
+                            <div class="item-box clearfix">
+                              <i class="icon-skype"></i>
+                              <div class="item-data">
+                                <h3><a href="">r1991vm</a></h3>
+                                <p>skype</p>
                               </div>
                             </div>
                           </div>
@@ -183,21 +191,21 @@
                                 </li>
                             </ul>
                             <h3>
-                                Education
+                                Образование
                             </h3>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
+                                        Школа
+                                    </h5><span class="label label-success">1997-2008</span>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
+                                        Университет
+                                    </h5><span class="label label-warning">2008-2015</span>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
                                     </p>
@@ -213,10 +221,10 @@
                                     Software
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
+                                    <span style="width: 70%"><span>Photoshop</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
+                                    <span style="width: 60%"><span>Gimp</span></span>
                                 </div>
                                 <div class="meter wisteria">
                                     <span style="width: 60%"><span>InDesign</span></span>
@@ -251,20 +259,21 @@
                                     Язык программирования
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 80%"><span>PHP/MySql</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 75%"><span>///</span></span>
+                                    <span style="width: 85%"><span>HTML5</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 82%"><span>///</span></span>
+                                    <span style="width: 82%"><span>CSS3</span></span>
                                 </div>
+                                <div class="meter carrot">
+                                    <span style="width: 70%"><span>Bootstrap</span></span>
+                                </div>
+                                <div class="meter wisteria">
+                                    <span style="width: 60%"><span>jQuery</span></span>
+                                </div>
+                                <div class="meter sunflower">
+                                    <span style="width: 40%"><span>JavaScript</span></span>
+                                </div>
+
                             </div>
                         </div>
                     </section>
