--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
 <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Stoke" rel="stylesheet">
-
+<!--   <link href="https://fonts.googleapis.com/css?family=Roboto|Stoke" rel="stylesheet"> -->
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/stylename.css">
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -62,7 +63,7 @@
                   <a href="#resume"><i class="icon-file-text"></i><span> Резюме</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Портфолио</span></a>
+                    <a href="#portfolio"><i class="icon-heart"></i><span> Портфолио</span></a>
                 </li>
                 <li class='tab'>
                   <a href="#contact"><i class="icon-envelope"></i><span>Контакты</span></a>
