--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <!-- Header Start -->
         <header id="header">
             <div id="logo">
-                <h2>
+                <span><h2>
                    Yuri Yadvizhuk
-                </h2>
+                </h2></span>
                 <h4>
                     Web / Developer
                 </h4>
