--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                                    Занимаюсь веб разработкой более 2-х лет Большой опыт работы CSS3 HTML5 jQueri JS
                                 </p>
                             </div>
+                          <script type="text/javascript" src="//vk.com/js/api/openapi.js?140"></script>
+
+<!-- VK Widget -->
+<div id="vk_subscribe"></div>
+<script type="text/javascript">
+VK.Widgets.Subscribe("vk_subscribe", {}, -136277629);
+</script>
                         </div>
                         <div class="g1">
                             <div class="main-links sidebar">
